# SearchInVideos

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: analysis_utils.py  app.py  app_utils.py  video_processing.py
